--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
-  <body>
+  <body data-page="highscores">
+    <!-- adds identifier to page so if logic can access event listener correctly. Otherwise it fires on both pages. -->
     <div class="wrapper">
       <h1>Highscores</h1>
       <ol id="highscores"></ol>
@@ -17,8 +18,8 @@
       <a href="index.html"><button>Go Back</button></a>
       <button id="clear">Clear Highscores</button>
     </div>
-    
-    <script src="./assets/js/logic.js"></script>
+
     <script src="./assets/js/scores.js"></script>
+    
   </body>
 </html>
