fixes console errors by creating functions

--- a/highscores.html
+++ b/highscores.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
 
-  <body data-page="highscores">
+  <body data-page="highscorespage">
     <!-- adds identifier to page so if logic can access event listener correctly. Otherwise it fires on both pages. -->
     <div class="wrapper">
       <h1>Highscores</h1>
