--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
     <script src="./assets/js/logic.js"></script>
 
-    <script src="./assets/js/scores.js"></script>
+    <!-- <script src="./assets/js/scores.js"></script> -->
 
     
   </body>
